--- a/style.css
+++ b/style.css
@@ -1,52 +1,65 @@
-#app{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-flow: column nowrap;
-    height: 40vh;
+#app {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-flow: column nowrap;
+  height: 40vh;
 }
 
-.wordDisplay{
-    height: 2rem;
-    width: 4rem;
-    border: 1px solid black;
+.wordDisplay {
+  height: 2rem;
+  width: 4rem;
+  border: 1px solid black;
 }
 
-.pictureDisplay{
-    display: flex;
-    flex-flow: row nowrap;
-    align-items: center;
-    justify-content: space-between;
+.pictureDisplay {
+  position: relative;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  justify-content: space-between;
 }
 
-.picture{
-    position: relative;
-    width: 6rem;
-    height: 6rem;
-    border: 1px solid black;
+.picture {
+  position: relative;
+  width: 6rem;
+  height: 6rem;
+  border: 1px solid black;
 }
 
-.picture.correct::after{
-    content: '✓';
-    position: absolute;
-    right: 0;
-    bottom: 0;
+.picture.correct::after {
+  content: "✓";
+  position: absolute;
+  right: 0;
+  bottom: 0;
 
-    color: greenyellow;
-    font-size: 2rem;
+  color: greenyellow;
+  font-size: 2rem;
 }
 
-.picture.wrong::after{
-    content: 'X';
-    position: absolute;
-    right: 0;
-    bottom: 0;
+.picture.wrong::after {
+  content: "X";
+  position: absolute;
+  right: 0;
+  bottom: 0;
 
-    color: red;
-    font-size: 2rem;
+  color: red;
+  font-size: 2rem;
 }
 
-.disabled{
-    pointer-events: none;
-    background: none;
+.disabled {
+  pointer-events: none;
+  background: none;
+}
+
+.cover {
+  position: absolute;
+  background-color: transparent;
+  /* background-color: blue; */
+  width: 100%;
+  height: 100%;
+}
+
+.hide{
+    display: none;
 }
