--- a/style.css
+++ b/style.css
@@ -1,15 +1,21 @@
 #app {
   display: flex;
-  justify-content: center;
+  justify-content: space-evenly;
   align-items: center;
   flex-flow: column nowrap;
-  height: 40vh;
+  margin-top: 5rem;
 }
 
 .wordDisplay {
-  height: 2rem;
-  width: 4rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 4rem;
+  width: 14rem;
   border: 1px solid black;
+  margin-bottom: 5rem;
+
+  font-size: 2rem;
 }
 
 .pictureDisplay {
@@ -17,13 +23,15 @@
   display: flex;
   flex-flow: row nowrap;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
+
+  width: 100%;
 }
 
 .picture {
   position: relative;
-  width: 6rem;
-  height: 6rem;
+  width: 15rem;
+  height: 15rem;
   border: 1px solid black;
 }
 
@@ -34,7 +42,7 @@
   bottom: 0;
 
   color: greenyellow;
-  font-size: 2rem;
+  font-size: 8rem;
 }
 
 .picture.wrong::after {
@@ -44,7 +52,7 @@
   bottom: 0;
 
   color: red;
-  font-size: 2rem;
+  font-size: 8rem;
 }
 
 .disabled {
@@ -60,6 +68,6 @@
   height: 100%;
 }
 
-.hide{
-    display: none;
+.hide {
+  display: none;
 }
