--- a/style.css
+++ b/style.css
@@ -1,4 +1,13 @@
+@font-face {
+  font-family: "sandybold";
+  src: url("assets/Font/sandy-bold-webfont.woff2") format("woff2"),
+    url("assets/Font/sandy-bold-webfont.woff") format("woff");
+  font-weight: normal;
+  font-style: normal;
+}
+
 #app {
+  position: relative;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
@@ -66,6 +75,64 @@
   /* background-color: blue; */
   width: 100%;
   height: 100%;
+}
+
+.startScene {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  flex-flow: column;
+  row-gap: 8rem;
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+  background-color: rgb(255, 23, 23);
+}
+
+.title {
+  font-family: "sandybold", Verdana, sans-serif;
+  display: inline-block;
+  text-align: center;
+  width: fit-content;
+  border: 5px solid rgb(158, 157, 157);
+  font-size: 4rem;
+  margin-top: 2rem;
+  background-color: white;
+}
+
+.startButton {
+  font-size: 2rem;
+  width: fit-content;
+  padding: 0.3rem 1rem;
+}
+
+.gameoverScene {
+  position: absolute;
+  display: flex;
+  align-items: center;
+  flex-flow: column;
+  row-gap: 8rem;
+  height: 100%;
+  width: 100%;
+  z-index: 1;
+  background-color: rgb(41, 41, 41);
+}
+
+.gameoverTitle {
+  font-family: "sandybold", Verdana, sans-serif;
+  display: inline-block;
+  text-align: center;
+  width: fit-content;
+  border: 5px solid rgb(158, 157, 157);
+  font-size: 4rem;
+  margin-top: 2rem;
+  background-color: white;
+}
+
+.restartButton {
+  font-size: 2rem;
+  width: fit-content;
+  padding: 0.3rem 1rem;
 }
 
 .hide {
